refactor: shift
